--- a/services.html
+++ b/services.html
@@ -136,7 +136,7 @@
 					</div>
 					<div class="collapse navbar-collapse" id="ftco-nav">
 						<img class="log-sm" src="images/logo/logo-2.png" alt="Chiropractic Logo"
-							style="height: 200px; width: 200px; margin-top: -40px; margin-left: 140px;">
+							style="height: 200px; width: 200px; margin-top: -7px; margin-left: -60px;">
 						<ul class="navbar-nav mr-auto">
 							<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 							<li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
@@ -297,7 +297,7 @@
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.455715606157!2d77.54633517417199!3d13.006626014111209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3d7638f98105%3A0xd6b0ddf9c075abc8!2sPathocon%20Diagnostics!5e0!3m2!1sen!2sin!4v1739269267052!5m2!1sen!2sin" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
 					</iframe>
 
-					<ul>
+					<ul class="mt-3">
 						<li><span class="icon fa fa-map-marker"></span><span class="text"></span>1st R
 							Block, Rajaji Nagar, 10, A/A-1, Chord Rd, Mahalakshmi Layout, Bengaluru,
 							Karnataka 560010</li>
