--- a/gallery.html
+++ b/gallery.html
@@ -129,6 +129,7 @@
 					  </div>
 				  </div>
 			  </div>
+		  </div>
 			  
 			  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light pt-4" id="ftco-navbar">
 				<div class="container">
