--- a/team.html
+++ b/team.html
@@ -375,7 +375,7 @@
 		<div class="col-md-12 text-center">
 
 			<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-				Pathocon Diagnostics 2025 All rights reserved 
+				© 2025 Pathocon_Diagnostics  All rights reserved 
 			   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 		</div>
 	  </div>
