--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
 						</div>
 					</div>
 				</div>
-				<a class="carousel-control-prev" href="#homeCarousel" role="button" data-bs-slide="prev">
+				<!-- <a class="carousel-control-prev" href="#homeCarousel" role="button" data-bs-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="visually-hidden">Previous</span>
 				</a>
 				<a class="carousel-control-next" href="#homeCarousel" role="button" data-bs-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="visually-hidden">Next</span>
-				</a>
+				</a> -->
 			</div>
 		</div>
 		<!-- About Section -->
