--- a/contact.html
+++ b/contact.html
@@ -67,64 +67,48 @@
 			</div>
 		</div> -->
 		  <div class="wrap">
-			  <div class="container" style="margin-top: -20px; margin-bottom: -40px;">
-				  <div class="row justify-content-between nav-sm">
-					  <div class="col-md-3 mb-md-0 mb-4 d-flex align-items-center">
-						  <a class="navbar-brand" href="index.html">
-							  <img src="images/logo/logo-2.png" alt="Chiropractic Logo" style="height: 200px; width: 250px; margin-top: -70px; margin-left: -60px;">
-						  </a>
-					  </div>
-					  <div class="col-md-7">
-						  <div class="row align-items-center">
-  <!-- Email Section -->
-  <div class="col-md-4 mb-md-0 mb-3">
-	  <div class="top-wrap d-flex">
-		<div class="icon d-flex align-items-center justify-content-center" style="margin-bottom: 20px;">
-		  <span class="fa fa-envelope"></span>
-		</div>
-		<div class="text" style="margin-bottom: 20px;">
-		  <h5>Email Us</h5>
-		  <a href="mailto:Info.pathocon@gmail.com" class="email-link">
-			Info.pathocon@gmail.com
-		  </a>
-		  <a href="mailto:Info.Pathocondiagnostics@gmail.com" class="email-link">
-			  Pathocondiagnostics@gmail.com
-			</a>
-		</div>                
-	  </div>
-	</div>
-	<!-- Call Section -->
-	<div class="col-md-4">
-	  <div class="top-wrap d-flex">
-		<div class="icon d-flex align-items-center justify-content-center" style="margin-bottom: 20px;">
-		  <span class="fa fa-phone"></span>
-		</div>
-		<div class="text" style="margin-bottom: 20px;">
-		  <h5>Call us</h5>
-		  <a href="tel:+919916443606" class="phone-number">
-			+91 9916443606
-		  </a>
-		  <a href="tel:+918023476990" class="phone-number">
-			  08023476990
-			</a>
-		</div>                
-	  </div>
-  
-							  </div>
-							  <!-- Social Media Section -->
-							  <div class="col-md-4">
-								  <div class="top-wrap d-flex justify-content-center">
-									  <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
-										  <!-- <li class="ftco-animate"><a href="https://www.youtube.com/@digitalpathocon"><span class=""></span></a></li>
-										  <li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=61571365697816"><span class=""></span></a></li> -->
-										  <li class="ftco-animate"><a href="https://www.instagram.com/pathocon_diagnostics/"><span class=""></span></a></li>
-										</ul>
-								  </div>
-							  </div>
-						  </div>
-					  </div>
-				  </div>
-			  </div>
+			<div class="container" style="margin-top: -20px; margin-bottom: -40px;">
+				<div class="row justify-content-between nav-sm">
+					<div class="col-md-3 mb-md-0 mb-4 d-flex align-items-center">
+						<a class="navbar-brand" href="index.html">
+							<img src="images/logo/logo-2.png" alt="Chiropractic Logo"
+								style="height: 200px; width: 250px; margin-top: -70px; margin-left: -60px;">
+						</a>
+					</div>
+					<div class="col-md-7">
+						<div class="row align-items-center">
+							<!-- Email and Call Section Combined -->
+							<div class="col-md-12">
+								<div class="top-wrap d-flex align-items-center flex-wrap">
+									<!-- Email Section -->
+									<div class="d-flex align-items-center me-4">
+										<div class="icon d-flex align-items-center justify-content-center me-2">
+											<span class="fa fa-envelope"></span>
+										</div>
+										<div class="text" style="margin-top: -20px;">
+											<h5 class="d-inline me-2">Email Us:</h5>
+											<a href="mailto:Info.pathocon@gmail.com" class="email-link me-2">Info.pathocon@gmail.com</a> | 
+											<a href="mailto:Info.Pathocondiagnostics@gmail.com" class="email-link ms-2">Pathocondiagnostics@gmail.com</a>
+										</div>
+									</div>
+			
+									<!-- Call Section -->
+									<div class="d-flex align-items-center" style="margin-top: -15px;">
+										<div class="icon d-flex align-items-center justify-content-center me-2">
+											<span class="fa fa-phone"></span>
+										</div>
+										<div class="text" style="margin-top: -20px;">
+											<h5 class="d-inline me-2">Call Us:</h5>
+											<a href="tel:+919916443606" class="phone-number me-2">+91 9916443606</a> | 
+											<a href="tel:+918023476990" class="phone-number ms-2">08023476990</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 			  
 			  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light pt-4" id="ftco-navbar">
 				<div class="container">
@@ -285,7 +269,7 @@
 	        	<!-- <li class="nav-item"><a href="department.html" class="nav-link"><span class="fa fa-check mr-3"></span>Departments</a></li> -->
 	        	<li class="nav-item"><a href="gallery.html" class="nav-link"><span class="fa fa-check mr-3"></span>Gallery</a></li>
 	        	<!-- <li class="nav-item"><a href="blog.html" class="nav-link"><span class="fa fa-check mr-3"></span>Blog</a></li> -->
-	          <li class="nav-item"><a href="contact.html" class="nav-link"><span class="fa fa-check mr-3"></span>Contact</a></li>
+	          <li class="nav-item"><a href="contact.html" class="nav-link"><span class="fa fa-check mr-3"></span>Contact Us</a></li>
 			  </ul>
 			</div>
 		  </div>
