--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   	</div> -->
 	<div class="wrap">
 		<div class="container" style="margin-top: -20px; margin-bottom: -40px;">
-			<div class="row justify-content-between nav-sm ">
+			<div class="row justify-content-between nav-sm">
 				<div class="col-md-3 mb-md-0 mb-4 d-flex align-items-center">
 					<a class="navbar-brand" href="index.html">
 						<img src="images/logo/logo-2.png" alt="Chiropractic Logo"
@@ -85,59 +85,38 @@
 				</div>
 				<div class="col-md-7">
 					<div class="row align-items-center">
-						<!-- Email Section -->
-						<div class="col-md-4 mb-md-0 mb-3">
-							<div class="top-wrap d-flex">
-								<div class="icon d-flex align-items-center justify-content-center"
-									style="margin-bottom: 20px;">
-									<span class="fa fa-envelope"></span>
+						<!-- Email and Call Section Combined -->
+						<div class="col-md-12">
+							<div class="top-wrap d-flex align-items-center flex-wrap">
+								<!-- Email Section -->
+								<div class="d-flex align-items-center me-4">
+									<div class="icon d-flex align-items-center justify-content-center me-2">
+										<span class="fa fa-envelope"></span>
+									</div>
+									<div class="text" style="margin-top: -20px;">
+										<h5 class="d-inline me-2">Email Us:</h5>
+										<a href="mailto:Info.pathocon@gmail.com" class="email-link me-2">Info.pathocon@gmail.com</a> | 
+										<a href="mailto:Info.Pathocondiagnostics@gmail.com" class="email-link ms-2">Pathocondiagnostics@gmail.com</a>
+									</div>
 								</div>
-								<div class="text" style="margin-bottom: 20px;">
-									<h5>Email Us</h5>
-									<a href="mailto:Info.pathocon@gmail.com" class="email-link">
-										Info.pathocon@gmail.com
-									</a>
-									<a href="mailto:Info.Pathocondiagnostics@gmail.com" class="email-link">
-										Pathocondiagnostics@gmail.com
-									</a>
+		
+								<!-- Call Section -->
+								<div class="d-flex align-items-center" style="margin-top: -15px;">
+									<div class="icon d-flex align-items-center justify-content-center me-2">
+										<span class="fa fa-phone"></span>
+									</div>
+									<div class="text" style="margin-top: -20px;">
+										<h5 class="d-inline me-2">Call Us:</h5>
+										<a href="tel:+919916443606" class="phone-number me-2">+91 9916443606</a> | 
+										<a href="tel:+918023476990" class="phone-number ms-2">08023476990</a>
+									</div>
 								</div>
-							</div>
-						</div>
-						<!-- Call Section -->
-						<div class="col-md-4">
-							<div class="top-wrap d-flex">
-								<div class="icon d-flex align-items-center justify-content-center"
-									style="margin-bottom: 20px;">
-									<span class="fa fa-phone"></span>
-								</div>
-								<div class="text" style="margin-bottom: 20px;">
-									<h5>Call us</h5>
-									<a href="tel:+919916443606" class="phone-number">
-										+91 9916443606
-									</a>
-									<a href="tel:+918023476990" class="phone-number">
-										08023476990
-									</a>
-								</div>
-							</div>
-
-						</div>
-						<!-- Social Media Section -->
-						<div class="col-md-4">
-							<div class="top-wrap d-flex justify-content-center">
-								<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
-									<!-- <li class="ftco-animate"><a href="https://www.youtube.com/@digitalpathocon"><span class=""></span></a></li>
-										<li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=61571365697816"><span class=""></span></a></li> -->
-									<li class="ftco-animate"><a
-											href="https://www.instagram.com/pathocon_diagnostics/"><span
-												class=""></span></a></li>
-								</ul>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>		
 
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light pt-4" id="ftco-navbar">
 			<div class="container">
@@ -231,9 +210,9 @@
 								physiotherapy, hematology, biochemistry, microbiology, serology, histopathology,
 								cytology, clinical pathology, hormones & immunoassays, and advanced diagnostic imaging
 								such as computerized radiography (X-ray), Doppler studies, ultrasound, echocardiography,
-								and ECG & TMT. Trust us for all your healthcare diagnostic needs.</p>
+								and ECG & TMT. Trust us for all your healthcare diagnostic needs.Specialized in AIDS Diagnostics and Care.</p>
 
-							<p><strong>Specialized in AIDS Diagnostics and Care.</strong></p>
+							<!-- <p><strong>Specialized in AIDS Diagnostics and Care.</strong></p> -->
 						</div>
 					</div>
 				</div>
@@ -249,28 +228,28 @@
 					<div class="col-lg-3 col-md-6 mb-4">
 						<div class="counter-box">
 							<h3 class="counter" data-target="500">0</h3>
-							<p>Happy Clients</p>
+							<p style="color: aliceblue;">Happy Clients</p>
 						</div>
 					</div>
 					<!-- Counter 2 -->
 					<div class="col-lg-3 col-md-6 mb-4">
 						<div class="counter-box">
 							<h3 class="counter" data-target="13000">0</h3>
-							<p>AIDS Tests Conducted</p>
+							<p style="color: aliceblue;">AIDS Tests Conducted</p>
 						</div>
 					</div>
 					<!-- Counter 3 -->
 					<div class="col-lg-3 col-md-6 mb-4">
 						<div class="counter-box">
 							<h3 class="counter" data-target="24">0</h3>
-							<p>Years of Experience</p>
+							<p style="color: aliceblue;">Years of Experience</p>
 						</div>
 					</div>
 					<!-- Counter 4 -->
 					<div class="col-lg-3 col-md-6 mb-4">
 						<div class="counter-box">
 							<h3 class="counter" data-target="50">0</h3>
-							<p>Team Members</p>
+							<p style="color: aliceblue;">Team Members</p>
 						</div>
 					</div>
 				</div>
@@ -280,7 +259,7 @@
 		<!--About section end-->
 		<section class="ftco-section">
 			<div class="container">
-				<div class="row justify-content-center pb-5 mb-2">
+				<div class="row justify-content-center">
 					<div class="col-md-7 heading-section text-center ftco-animate">
 						<span class="subheading">Services</span>
 						<h2 style="color: black;">Our Key Tests</h2>
@@ -373,9 +352,7 @@
 				</div>
 			</div>
 		</section>
-
-
-
+		<!-- testimonials start -->
 		<section class="testimonials">
 			<h2>What Clients Say About Pathocon Diagnostics</h2>
 			<div class="testimonial-boxes">
@@ -465,7 +442,7 @@
 											class="fa fa-check mr-3"></span>Gallery</a></li>
 								<!-- <li class="nav-item"><a href="blog.html" class="nav-link"><span class="fa fa-check mr-3"></span>Blog</a></li> -->
 								<li class="nav-item"><a href="contact.html" class="nav-link"><span
-											class="fa fa-check mr-3"></span>Contact</a></li>
+											class="fa fa-check mr-3"></span>Contact Us</a></li>
 							</ul>
 						</div>
 					</div>
