--- a/contact.html
+++ b/contact.html
@@ -221,6 +221,14 @@
 						  <p><strong>Phone:</strong> +91 9916443606 | 08023476990</p>
 						</div>
 					  </div>
+					  <div class="dbox w-100 d-flex align-items-center">
+						<div class="icon d-flex align-items-center justify-content-center">
+						  <span class="fa fa-envelope"></span>
+						</div>
+						<div class="text pl-3">
+						  <p><strong>Email:</strong>Info.pathocon@gmail.com | Pathocondiagnostics@gmail.com</p>
+						</div>
+					  </div>
 					</div>
 				  </div>
 				</div>
