--- a/contact.html
+++ b/contact.html
@@ -307,8 +307,7 @@
 						<li><span class="icon fa fa-map-marker"></span><span class="text"></span>1st R
 							Block, Rajaji Nagar, 10, A/A-1, Chord Rd, Mahalakshmi Layout, Bengaluru,
 							Karnataka 560010</li>
-						<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">080 2347
-									6990</span></a></li>
+						<li><a href="contact.html"><span class="icon fa fa-phone"></span><span class="text">+91 9916443606 | 08023476990</span></a></li>
 						<!-- <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text"></span></a></li> -->
 					</ul>
 				</div>
