--- a/about.html
+++ b/about.html
@@ -27,16 +27,17 @@
 			.nav-sm {
 				display: none;
 			}
-
-			.log-sm {
-				display: block;
-				/* Or flex, depending on your layout */
-			}
-
-
 		}
+		@media (max-width:768px) {
+			.log-sm {
+				margin-left: 130px !important;
+			}
+			.navbar-nav {
+				margin-left: 150px !important;
+			}
+		}
+            
 	</style>
-
   
 	
   </head>
@@ -62,7 +63,7 @@
 	<div class="wrap">
 		<div class="container" style="margin-top: -20px; margin-bottom: -40px;">
 			<div class="row justify-content-between nav-sm">
-				<div class="col-md-7">
+				<div class="col-md-7" style="margin-left: 750px;">
 					<div class="row align-items-center">
 						<!-- Email and Call Section Combined -->
 						<div class="col-md-12">
