--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
 			.nav-sm {
 				display: none;
 			}
-
-			.log-sm {
-				display: block;
-				/* Or flex, depending on your layout */
-			}
-
-
 		}
-
+		@media (max-width:768px) {
+			.log-sm {
+				margin-left: 130px !important;
+			}
+			.navbar-nav {
+				margin-left: 150px !important;
+			}
+		}
+            
 	</style>
 
 
@@ -71,7 +72,7 @@
 	  <div class="wrap">
 		<div class="container" style="margin-top: -20px; margin-bottom: -40px;">
 			<div class="row justify-content-between nav-sm">
-				<div class="col-md-7">
+				<div class="col-md-7" style="margin-left: 750px;">
 					<div class="row align-items-center">
 						<!-- Email and Call Section Combined -->
 						<div class="col-md-12">
@@ -370,10 +371,9 @@
 
 				<div class="testimonial-box">
 					<img src="images/logo/avatar-icon.jpg" alt="Client Photo" class="client-photo">
-					<h3>Aditya Mohata</h3>
-					<p class="testimonial-text">Very polite and professional staff, addressed all queries and very
-						prompt in service with explanation on what's happening and the next course of action.</p>
-					<p>Recommend this place for tests. Special thanks to Ms. Shakuntala Madam for her oversight.</p>
+					<h3>Kushal S</h3>
+					<p class="testimonial-text">I recently visited this laboratory for an X-ray and was thoroughly impressed by their exceptional service. From the moment I walked in, the staff at the reception were welcoming and professional, ensuring a seamless check-in process.</p>
+					<p class="testimonial-text">The employees were not only polite but also very efficient and attentive to patient needs. Their professionalism and friendly demeanor made the entire experience stress-free and comfortable.</p>
 				</div>
 
 			</div>
