--- a/Laboratory.html
+++ b/Laboratory.html
@@ -114,8 +114,10 @@
 					<!-- <a href="#" class="btn btn-primary">Make an appointment</a> -->
 				</div>
 				<div class="collapse navbar-collapse" id="ftco-nav">
-					<img class="log-sm" src="images/logo/logo-9.png" alt="Chiropractic Logo"
-						style="height: 100px; width: 100px; margin-top: -10px; margin-left: -10px;">
+					<a href="index.html">
+						<img class="log-sm" src="images/logo/logo-9.png" alt="Chiropractic Logo"
+							style="height: 100px; width: 100px; margin-top: -10px; margin-left: -10px;">
+					</a>
 					<ul class="navbar-nav mr-auto" style="margin-left: 250px;">
 						<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
@@ -235,7 +237,7 @@
 					</iframe>
 
 					<ul class="mt-3">
-						<li><a href="contact.html"><span class="fa fa-envelope"></span><span class="email-link me-5"> Pathocondiagnostics@gmail.com</span></a></li>
+						<li><a href="contact.html"><span class="fa fa-envelope"></span><span class="email-link me-5">Pathocondiagnostics@gmail.com|Info.pathocon@gmail.com</span></a></li>
 							<li><a href="contact.html"><span class="icon fa fa-phone"></span><span class="text">+91 9916443606 | 08023476990</span></a></li>
 						<!-- <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text"></span></a></li> -->
 					</ul>
