--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
 			<div class="container text-center">
 			   <h2 class="section-title text-white">Our Comprehensive Services</h2>
 			   <p class="mb-5" style="color: aliceblue;">At our diagnostic center, we offer a full spectrum of services to ensure your health and well-being:</p>
-			   <div class="row">
+			   <div class="row" style="margin-top: 100px;">
 				  <!-- Counter 1 -->
 				  <div class="col-lg-3 col-md-6 mb-4">
 					 <div class="counter-box">
