--- a/Imaging.html
+++ b/Imaging.html
@@ -70,12 +70,12 @@
   	</div> -->
 	  <div class="wrap">
 		<div class="container" style="margin-top: -20px; margin-bottom: -40px;">
-			<div class="row justify-content-between nav-sm">
-				<div class="col-md-7" style="margin-left: 750px;">
+			<div class="row justify-content-between nav-sm" style="justify-content: end !important;">
+				<div class="col-md-7">
 					<div class="row align-items-center">
 						<!-- Email and Call Section Combined -->
 						<div class="col-md-12">
-							<div class="top-wrap d-flex align-items-center flex-wrap">
+							<div class="top-wrap d-flex align-items-center flex-wrap" style="justify-content: end;">
 								<!-- Email Section -->
 								<div class="d-flex align-items-center me-4">
 									<div class="icon d-flex align-items-center justify-content-center me-2">
@@ -233,7 +233,7 @@
 					</iframe>
 
 					<ul class="mt-3">
-						<li><a href="contact.html"><span class="fa fa-envelope"></span><span class="email-link me-5">Pathocondiagnostics@gmail.com|Info.pathocon@gmail.com</span></a></li>
+						<li><a href="contact.html"><span class="fa fa-envelope"></span><span class="email-link me-5">Pathocondiagnostics@gmail.com|<br>Info.pathocon@gmail.com</span></a></li>
 							<li><a href="contact.html"><span class="icon fa fa-phone"></span><span class="text">+91 9916443606 | 08023476990</span></a></li>
 						<!-- <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text"></span></a></li> -->
 					</ul>
