--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 						<div class="heading-section">
 							<span class="subheading" style="color: #01d28e;">Welcome to Pathocon Diagnostics</span>
 							<h2 class="mb-4">NABL, TGS Certified, ISO 9001:2015 Diagnostic Center</h2>
-							<p>Welcome to Pathocon Diagnostic Center, with over 24 years of expertise in providing
+							<p>Welcome to Pathocon Diagnostics Center, with over 24 years of expertise in providing
 								comprehensive medical services. As an NABL, TGS Certified, and ISO 9001:2015 accredited
 								facility, we are committed to offering accurate, reliable, and timely diagnostic
 								solutions. Our wide range of services includes general medicine, cardiology,
