--- a/contact.html
+++ b/contact.html
@@ -286,8 +286,9 @@
 					</iframe>
 
 					<ul class="mt-3">
-						<li><a href="contact.html"><span class="fa fa-envelope"></span><span class="email-link me-5">Pathocondiagnostics@gmail.com|<br>Info.pathocon@gmail.com</span></a></li>
-						<li><a href="contact.html"><span class="icon fa fa-phone"></span><span class="text">+91 9916443606 | 08023476990</span></a></li>
+						<li style="margin-bottom: 0px;"><a href="mailto:Pathocondiagnostics@gmail.com"><span class="fa fa-envelope"></span><span class="email-link me-5"> Pathocondiagnostics@gmail.com|</span></a></li>
+						<li style="margin-bottom: 0px;"><a href="mailto:Info.pathocon@gmail.com"><span class="fa fa-envelope"></span><span class="email-link me-5"> Info.pathocon@gmail.com</span></a></li>
+							<li style="margin-bottom: 0px;"><a href="tel:+919916443606"><span class="icon fa fa-phone"></span><span class="text">+91 9916443606 | 08023476990</span></a></li>
 						<!-- <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text"></span></a></li> -->
 					</ul>
 				</div>
